Bug 85829 - [IVB/HSW]igt/kms_force_connector fails
Summary: [IVB/HSW]igt/kms_force_connector fails
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Thomas Wood
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-11-04 02:58 UTC by lu hua
Modified: 2017-10-06 14:34 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (126.86 KB, text/plain)
2014-11-10 03:34 UTC, lu hua
no flags Details
lib: fix igt_reset_connectors (1.09 KB, patch)
2014-11-21 14:16 UTC, Thomas Wood
no flags Details | Splinter Review

Description lu hua 2014-11-04 02:58:03 UTC
==System Environment==
--------------------------
Regression: not sure 
Non-working platforms: IVB

==kernel==
--------------------------
drm-intel-nightly/203b34bf78a127a85cf89bbd8cf4decd935d780f

==Bug detailed description==
Run automation testing, it fails. I can't reproduce the fail manually.

run log:
@test: Intel_gpu_tools/igt_kms_force_connector
info: @@@Returncode: 0

test case start at: Tue Nov  4 07:37:26 2014
test case end at:   Tue Nov  4 07:37:30 2014

Errors:


Dmesg:


Output:
             command   pid dev master a   uid      magic
Test Environment check: Succeeded.
[1/1] fail: 1 Running Test(s): 0
[1/1] fail: 1 Running Test(s): 1


Thank you for running Piglit!
Results have been written to /GFX/Test/Piglit/piglit/t
{
    "results_version": 2,
    "uname": "Linux x-ivb9 3.18.0-rc2_drm-intel-nightly_203b34_20141103_debug+ #1128 SMP Mon Nov 3 11:30:01 CST 2014 x86_64 x86_64 x86_64 GNU/Linux\n",
    "time_elapsed": 0.20467114448547363,
    "tests": {
        "igt/kms_force_connector": {
            "returncode": 99,
            "err": "",
            "environment": "PIGLIT_SOURCE_DIR=\"/GFX/Test/Piglit/piglit\" PIGLIT_PLATFORM=\"mixed_glx_egl\"",
            "command": "/GFX/Test/Intel_gpu_tools/intel-gpu-tools/tests/kms_force_connector",
            "result": "fail",
            "time": 0.01906609535217285,
            "out": "IGT-Version: 1.8-ge622850 (x86_64) (Linux: 3.18.0-rc2_drm-intel-nightly_203b34_20141103_debug+ x86_64)\nTest assertion failure function main, file kms_force_connector.c:118:\nFailed assertion: temp->connection == vga_connector->connection\n"
        }
    },
    "name": "t",
    "lspci": "00:00.0 Host bridge: Intel Corporation Xeon E3-1200 v2/3rd Gen Core processor DRAM Controller (rev 09)\n00:02.0 VGA compatible controller: Intel Corporation Xeon E3-1200 v2/3rd Gen Core processor Graphics Controller (rev 09)\n00:14.0 USB controller: Intel Corporation 7 Series/C210 Series Chipset Family USB xHCI Host Controller (rev 04)\n00:16.0 Communication controller: Intel Corporation 7 Series/C210 Series Chipset Family MEI Controller #1 (rev 04)\n00:16.3 Serial controller: Intel Corporation 7 Series/C210 Series Chipset Family KT Controller (rev 04)\n00:19.0 Ethernet controller: Intel Corporation 82579LM Gigabit Network Connection (rev 04)\n00:1a.0 USB controller: Intel Corporation 7 Series/C210 Series Chipset Family USB Enhanced Host Controller #2 (rev 04)\n00:1b.0 Audio device: Intel Corporation 7 Series/C210 Series Chipset Family High Definition Audio Controller (rev 04)\n00:1d.0 USB controller: Intel Corporation 7 Series/C210 Series Chipset Family USB Enhanced Host Controller #1 (rev 04)\n00:1e.0 PCI bridge: Intel Corporation 82801 PCI Bridge (rev a4)\n00:1f.0 ISA bridge: Intel Corporation Q77 Express Chipset LPC Controller (rev 04)\n00:1f.2 RAID bus controller: Intel Corporation 82801 SATA Controller [RAID mode] (rev 04)\n00:1f.3 SMBus: Intel Corporation 7 Series/C210 Series Chipset Family SMBus Controller (rev 04)\n",
    "options": {
        "profile": [
            "tests/igt.py"
        ],
        "dmesg": false,
        "execute": true,
        "log_level": "quiet",
        "concurrent": "some",
        "valgrind": false,
        "sync": false,
        "filter": [
            "igt/kms_force_connector$"
        ],
        "platform": "mixed_glx_egl",
        "exclude_tests": [],
        "env": {
            "PIGLIT_SOURCE_DIR": "/GFX/Test/Piglit/piglit",
            "PIGLIT_PLATFORM": "mixed_glx_egl"
        },
        "exclude_filter": []
    }
}
returncode: 0
result: fail
summary: Intel_gpu_tools/igt_kms_force_connector    FAIL          reboot
Comment 1 lu hua 2014-11-10 03:34:45 UTC
Created attachment 109183 [details]
dmesg

I reproduce it on HSW. Run ./kms_flip --run-subtest vblank-vs-modeset-rpm-interruptible then run ./kms_force_connector. 
If clean boot then run ./kms_force_connector, it works well.

output:
[root@x-hsw27 tests]# ./kms_flip --run-subtest vblank-vs-modeset-rpm-interruptible
IGT-Version: 1.8-gc049c39 (x86_64) (Linux: 3.18.0-rc3_drm-intel-fixes_dc54e7_20141109+ x86_64)
Using monotonic timestamps
Beginning vblank-vs-modeset-rpm-interruptible on crtc 8, connector 18
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
...
vblank-vs-modeset-rpm-interruptible on crtc 8, connector 18: PASSED

Beginning vblank-vs-modeset-rpm-interruptible on crtc 12, connector 18
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
..
vblank-vs-modeset-rpm-interruptible on crtc 12, connector 18: PASSED

Beginning vblank-vs-modeset-rpm-interruptible on crtc 16, connector 18
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x40 65000
..
vblank-vs-modeset-rpm-interruptible on crtc 16, connector 18: PASSED

Subtest vblank-vs-modeset-rpm-interruptible: SUCCESS (12.252s)
[root@x-hsw27 tests]# ./kms_force_connector
IGT-Version: 1.8-gc049c39 (x86_64) (Linux: 3.18.0-rc3_drm-intel-fixes_dc54e7_20141109+ x86_64)
Test assertion failure function main, file kms_force_connector.c:118:
Failed assertion: temp->connection == vga_connector->connection
Comment 2 Daniel Vetter 2014-11-20 16:11:33 UTC
Thomas, can you please take a look at this one? It seems like there's some leftover state when we try to force the vga connector, or something else that gets in the way.
Comment 3 Thomas Wood 2014-11-21 14:16:23 UTC
Created attachment 109798 [details] [review]
lib: fix igt_reset_connectors

This patch fixes igt_reset_connectors so that the connector state is reset after correctly after kms_flip. Please test and confirm whether it fixes the issue.
Comment 4 lu hua 2014-11-25 08:02:22 UTC
(In reply to Thomas Wood from comment #3)
> Created attachment 109798 [details] [review] [review]
> lib: fix igt_reset_connectors
> 
> This patch fixes igt_reset_connectors so that the connector state is reset
> after correctly after kms_flip. Please test and confirm whether it fixes the
> issue.

Test this patch, it works well.
Comment 5 Daniel Vetter 2014-11-25 08:35:20 UTC
I went ahead and pushed Thomas' patch.

commit dad4694b004a65455523abbb0c7f9839d7125dae
Author: Thomas Wood <thomas.wood@intel.com>
Date:   Mon Nov 24 14:16:25 2014 +0000

    lib: fix igt_reset_connectors
Comment 6 lu hua 2014-11-26 02:22:02 UTC
Verified.Fixed.
Comment 7 Elizabeth 2017-10-06 14:34:09 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.